Changelog
=========

1.1a3 (unreleased)
------------------

- fixed issue in invalidating root

- fixed error handling


1.1a2 (2011-03-30)
----------------

- do not invalidate when object is removed--gets messy

1.1a1 (2011-03-29)
----------------

- provide ability to ignore certain paths to be
   invalidated.

1.0a1 (2011-03-28)
----------------

- Initial release