@@ -4,6 +4,8 @@ from wildcard.level3caching.interfaces import ILevel3CachingSettings
 import zope.event
 from Products.Five import BrowserView
 from wildcard.level3caching.events import on_change
+from events import Level3CachePurgeForcedEvent
+from zope.event import notify
 
 
 class Level3SettingsForm(ploneformbase.EditForm):
@@ -27,4 +29,5 @@ class Utils(BrowserView):
     
     def invalidate(self):
         on_change(self.context, None, forced=True)
+        notify(Level3CachePurgeForcedEvent(self.context, self.request))
         return self.request.response.redirect(self.context.absolute_url() + '/view')
